--- a/source/stylesheets/syntax_github.scss
+++ b/source/stylesheets/syntax_github.scss
@@ -20,6 +20,7 @@ pre {
   padding: 6px 10px;
   white-space: pre;
   word-wrap: normal;
+  overflow: auto;
 }
 
 .c { color: #999988; font-style: italic } /* Comment */
